plugins/xpath/xpath-lang/testData/xpath/highlighting/consecutiveComparison.xpath2
<error descr="Consecutive comparison is not allowed in XPath 2">0 = 0 = true()</error>